# scrapiary_app

./: README.md  pyproject.toml  pyvenv.cfg
proper_scraper_2024/: auto-installer.py  make_directory.py  wbgapi_module.py  web_connect.py
proper_scraper_2024/app_frontend/: main_app.py  main_window.py
proper_scraper_2024/databases_dir/: db_manage.py
